--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 <head>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+body {background-color: orange;}
+h1   {color: white;}
+p    {color: sky blue;}
 <head>
